# share-files-server

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: main.rs
