[package]
name = "share-files-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
chrono = "0.4.31"
minio-rsc = "0.2.0"
serde = { version = "1.0.188", features = ["derive"] }
sha1_smol = "1.0.0"
